# mysite

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  git_start.sh  start.sh
assets/: boot.css  tailwind.css
manual/: CSS.md  CUSTOMIZE.md  boot.css.README.md
posts/iwaservice/: 2025-03-01-hajimari.md
posts/mizumo-robot/: 2025-01-10-hajimari.md
posts/robot/: 2025-04-01-hajimari.md
posts/slimevr/: 2025-05-01-hajimari.md
posts/vvvf/: 2025-02-01-hajimari.md
src/: about.rs  app.rs  header.rs  home.rs  main.rs  project_card.rs  projects.rs  projects_data.rs
src/components/: boot.rs  header.rs  mod.rs  posts_data.rs  project_card.rs  projects_data.rs
src/pages/: about.rs  home.rs  mod.rs  post_page.rs  project_detail.rs  projects.rs
src/views/: mod.rs
